...
                        Row(
                            Modifier.clip(RoundedCornerShape(50))
                                .background(Color.Transparent)
                                .padding(4.dp)
                        ) {
                            ModeButton(
                                "Read & write",
                                !model.practice && focusId == null,
                                Icons.AutoMirrored.Outlined.MenuBook,
                            ) {
                                model.mode(false)
                                focusId = null
                            }
...
                LazyColumn(
                    state = state,
                    userScrollEnabled = !model.input.twoFinger,
                    modifier =
                        Modifier.weight(1f)
                            .fillMaxWidth()
                            .testTag("reader")
                            .then(
                                if (model.input.twoFinger) Modifier.twoFingerScroll(state)
                                else Modifier
                            ),
                    contentPadding = PaddingValues(bottom = 60.dp),
                    horizontalAlignment = Alignment.CenterHorizontally,
...
